t+fr:[[résille]] t+ja:[[ヘアネット]] ([[WT:EDIT|Assisted]]) <hairnet#19786892>

--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -23,12 +23,12 @@
 *: Mandarin: {{t|cmn|髮網|sc=Hani}}, {{t|cmn|发网|tr=fàwǎng|sc=Hani}}, {{t|cmn|頭套|sc=Hani}}, {{t|cmn|头套|tr=tóutào|sc=Hani}}
 * Dutch: {{t+|nl|haarnetje|n}}
 * Finnish: {{t-|fi|hiusverkko}}
-* French: {{t+|fr|filet à cheveux|m}}
+* French: {{t+|fr|filet à cheveux|m}}, {{t|fr|résille|f}}
 * German: {{t+|de|Haarnetz|n}}
 {{trans-mid}}
 * Interlingua: [[rete]] pro le [[capillos]]
 * Irish: {{t-|ga|eangach ghruaige|f}}
-* Japanese: {{t|ja|コール|tr=kōru|sc=Jpan}}
+* Japanese: {{t|ja|コール|tr=kōru|sc=Jpan}}, {{t|ja|ヘアネット|tr=heanetto|sc=Jpan}}
 * Portuguese: [[rede]] para os [[cabelos]] {{f}}
 * Russian: {{t|ru|сетка|f|tr=sétka|sc=Cyrl}} {{qualifier|для воло́с}}
 * Spanish: {{t+|es|redecilla|f}}
