--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|ang}} {{term|leþer|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|leþran|lang=gem-pro}} (compare West Frisian {{term|leare|lang=fy}}, {{etyl|nl|-}} {{term|leder}}, {{etyl|de|-}} {{term|Leder}}, Swedish {{term|läder|lang=sv}}), from {{etyl|cel-gau}} *''letrom'' (compare {{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}), from pre-Celtic *''péltrom'', from {{etyl|ine-pro|en}} {{recons|pel-|lang=ine-pro}} 'to beat'. More at {{term|anvil}}.
+From {{etyl|enm}} {{term|lether|lang=enm}}, from {{etyl|ang}} {{term|leþer||leather|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|leþran||leather|lang=gem-pro}} (compare West Frisian {{term|leare|lang=fy}}, {{etyl|nl|-}} {{term|leder}}, {{etyl|de|-}} {{term|Leder}}, Swedish {{term|läder|lang=sv}}), from {{etyl|cel-gau}} *''letrom'' (compare {{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}), from pre-Celtic *''péltrom'', from {{etyl|ine-pro|en}} {{recons|pel-|lang=ine-pro}} 'to beat'. More at {{term|anvil}}.
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˈlɛðɚ/}}
