--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|lether|lang=enm}}, from {{etyl|ang}} {{term|leþer||leather|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|leþran||leather|lang=gem-pro}} (compare West Frisian {{term|leare|lang=fy}}, {{etyl|nl|-}} {{term|leder}}, {{etyl|de|-}} {{term|Leder}}, Swedish {{term|läder|lang=sv}}), from {{etyl|cel-gau}} *''letrom'' (compare {{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}), from pre-Celtic *''péltrom'', from {{etyl|ine-pro|en}} {{recons|pel-|lang=ine-pro}} 'to beat'. More at {{term|anvil}}.
+From {{etyl|enm}} {{term|lether|lang=enm}}, from {{etyl|ang}} {{term|leþer||leather|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|leþran||leather|lang=gem-pro}}, from {{etyl|ine-pro}} {{recons|letrom||leather|lang=ine-pro}}. Cognate with West Frisian {{term|leare||leather|lang=fy}}, {{etyl|nl|-}} {{term|leder}}, {{term|leer||leather|lang=nl}}, {{etyl|de|-}} {{term|Leder||leather|lang=de}}, Swedish {{term|läder||leather|lang=sv}}, {{etyl|is|-}} {{term|leður||leather|lang=is}}. The Celtic forms ({{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}) ultimately derive from the Germanic.
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˈlɛðɚ/}}
