--- a/en/h/humoral immunities.855896.wikitext
+++ b/en/h/humoral immunities.855896.wikitext
@@ -5,5 +5,7 @@
 
 # {{plural of|humoral immunity}}
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:humoral immunities]]
 [[fr:humoral immunities]]
