/* Noun */plural category using [[Project:AWB|AWB]] <nonidentities#19911782>

--- a/en/n/nonidentities.774509.wikitext
+++ b/en/n/nonidentities.774509.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|nonidentity}}
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:nonidentities]]
 [[fr:nonidentities]]
 [[ku:nonidentities]]
