/* Noun */plural category using [[Project:AWB|AWB]] <single-parent families#19915584>

--- a/en/s/single-parent families.856358.wikitext
+++ b/en/s/single-parent families.856358.wikitext
@@ -5,5 +5,7 @@
 
 # {{plural of|single-parent family}}
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:single-parent families]]
 [[fr:single-parent families]]
