--- a/en/s/snaileries.855905.wikitext
+++ b/en/s/snaileries.855905.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|snailery}}
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:snaileries]]
 [[fr:snaileries]]
 [[ku:snaileries]]
