/* Derived terms */ <bid#19920805>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -25,6 +25,7 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 =====Derived terms=====
 * [[bid adieu]]
 * [[bid fair]]
+* [[forbid]]
 
 =====Translations=====
 {{trans-top|to issue a command}}
