--- a/en/d/deaconesses.774929.wikitext
+++ b/en/d/deaconesses.774929.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|deaconess}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:deaconesses]]
 [[fr:deaconesses]]
 [[ku:deaconesses]]
