--- a/en/i/intrinsic brightnesses.855902.wikitext
+++ b/en/i/intrinsic brightnesses.855902.wikitext
@@ -5,5 +5,7 @@
 
 # {{plural of|intrinsic brightness}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:intrinsic brightnesses]]
 [[fr:intrinsic brightnesses]]
