--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -78,7 +78,7 @@ From {{etyl|ang}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|utra
 * Norwegian:
 *: Bokmål: {{t-|nb|oter|m}}
 *: Nynorsk: {{t-|nn|oter|m}}
-* Occitan: {{t|oc|loira}} {{g|oc}}
+* Occitan: {{t|oc|loira|f}}
 * Old English: {{t-|ang|otor|m}}
 * Ossetian:
 *: Digor: {{tø|os|урдæ|tr=urdæ|sc=Cyrl}}
