--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -118,6 +118,20 @@ Probably from {{term|marmotter}}.
 
 # {{colloquial|lang=fr}} [[kid]], [[brat]]
 
+----
+
+==Jèrriais==
+
+===Etymology===
+From {{etyl|fr|roa-jer}} {{term|marmot|lang=fr}}.
+
+===Noun===
+{{roa-jer-noun|m}}
+
+# [[brat]]
+
+[[Category:roa-jer:People]]
+
 [[et:marmot]]
 [[el:marmot]]
 [[eo:marmot]]
