--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -64,6 +64,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Finnish: {{t+|fi|kuluttaa}}, {{t+|fi|syödä}}
 * French: {{t+|fr|consommer}}
 * Hebrew: {{t-|he|צרך|tr=tsarákh}}
+* Hindi: {{t|hi|उपभोग करना|tr=upbhog karna|sc=Deva}}
 * Hungarian: {{t+|hu|elfogyaszt}}
 {{trans-mid}}
 * Irish: {{t-|ga|caith}}
