--- a/en/b/baculoviruses.775631.wikitext
+++ b/en/b/baculoviruses.775631.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|baculovirus}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:baculoviruses]]
 [[fr:baculoviruses]]
 [[ku:baculoviruses]]
