--- a/en/g/gushes.720121.wikitext
+++ b/en/g/gushes.720121.wikitext
@@ -10,6 +10,8 @@
 
 # {{third-person singular of|gush}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:gushes]]
 [[de:gushes]]
 [[fr:gushes]]
