--- a/en/l/landmasses.803567.wikitext
+++ b/en/l/landmasses.803567.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|landmass}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:landmasses]]
 [[fr:landmasses]]
 [[ku:landmasses]]
