--- a/en/w/wise-asses.746711.wikitext
+++ b/en/w/wise-asses.746711.wikitext
@@ -5,6 +5,8 @@
 
 # {{plural of|wise-ass}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:wise-asses]]
 [[fr:wise-asses]]
 [[ku:wise-asses]]
