t+fa:[[{{trreq}}]] t+km:[[{{trreq}}]] t-balance ([[WT:EDIT|Assisted]]) <theory#20000886>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -117,10 +117,12 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Hungarian: {{t|hu|elmélet}}
 * Irish: {{t-|ga|teoiric|f}}
 * Japanese: {{t+|ja|理論|tr=riron}}, {{t+|ja|学説|tr=gakusetsu}}
+* {{trreq|Khmer}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|теорија|f|tr=teórija}}
 * Maltese: {{t-|mt|teorija}}
 * Norwegian: {{t-|no|teori|m}}
+* {{trreq|Persian}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t-|ro|teorii|p}}
