--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -122,7 +122,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Macedonian: {{t-|mk|теорија|f|tr=teórija}}
 * Maltese: {{t-|mt|teorija}}
 * Norwegian: {{t-|no|teori|m}}
-* {{trreq|Persian}}
+* Persian: {{t|fa|نظریه|tr=nazariye|sc=fa-Arab}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
 * Romanian: {{t-|ro|teorii|p}}
