/* Noun */plural category using [[Project:AWB|AWB]] <mitoses#20003200>

--- a/en/m/mitoses.720279.wikitext
+++ b/en/m/mitoses.720279.wikitext
@@ -20,6 +20,8 @@
 
 # {{plural of|mitose|lang=fr}}
 
+[[Category:English plurals ending in "-es"]]
+
 [[ar:mitoses]]
 [[fr:mitoses]]
 [[ku:mitoses]]
