/* Translations */ spelling correction of arabic transcript <rabbit#20005658>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -51,7 +51,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Ainu: {{tø|ain|イセポ|tr=isepo}}
 * Alabama: {{tø|akz|chokfi}}
 * Albanian: {{t-|sq|lepur i gropave}}
-* Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=árnab}}
+* Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr='arnab}}
 * Armenian: {{t-|hy|ճագար|tr=č̣agar|sc=Armn}}
 * {{trreq|rup}}
 * Asturian: {{t-|ast|conexu|m}}
