--- a/en/s/synæreses.742367.wikitext
+++ b/en/s/synæreses.742367.wikitext
@@ -6,6 +6,7 @@
 # {{plural of|synæresis|lang=en}}
 
 [[Category:English terms spelled with Æ]]
+[[Category:English plurals ending in "-es"]]
 
 [[ar:synæreses]]
 [[fr:synæreses]]
