t+ga:[[séid]] t-balance ([[WT:EDIT|Assisted]]) <blow#20009404>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -124,13 +124,14 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Greek: {{t+|el|φυσώ|tr=fiso}}
 *: Ancient: {{tø|grc|ἄημι|tr=aēmi|sc=polytonic}}
 * Hungarian: {{t+|hu|fúj}}
+* Irish: {{t|ga|séid}}
 * Italian: {{t+|it|soffiare}}
 * Japanese: [[吹く]] ([[ふく]], fuku)
 * Korean: [[불다]] (bulda)
 * Kurdish:
 *: Sorani: {{ku-Arab|[[فو]]}}
-* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}},{{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}},{{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 * Latgalian: {{tø|ltg|pyust}}
 * Latin: {{t-|la|flo}}, {{t-|la|sufflo}}
 * Latvian: {{t+|lv|pūst}}
