--- a/en/t/think through.720293.wikitext
+++ b/en/t/think through.720293.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|to fully consider an action}}
 {{trans-mid}}
+* Spanish: {{t|es|cavilar}}
 {{trans-bottom}}
 
 [[Category:English phrasal verbs]]
