--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -227,7 +227,7 @@ From {{etyl|bat-pro|lv}} {{recons|bet|lang=bat-pro}}, from {{etyl|ine-pro|lv}} {
 # {{non-gloss definition|[[use]]d to [[connect]] a [[sentence]] to the [[precede|preceding]] [[context]], [[indicate|indicating]] an [[inconsistency]] or [[contradiction]], or a [[frustrated]] [[expectation]]}}; [[but|But]]... 
 #: ''Līzei bija bezgala žēl izmocītās jaunās sievas. '''Bet''' nu bija jāiet iekšā un jārunājas ar citiem'' — Līze was infinitely sorry for the exhausted young woman. '''But''' she had to go in and talk to others.
 #: ''pēc svētkiem Kārlēns aizgāja un solījās pārnākt atkal rudenī. '''Bet''' nepārnāca ne rudenī, ne pavasarī...'' — after the festivities Kārlēns went (away), promising to stay there again next fall. But he didn't come neither next fall, nor next spring...
-# {{non-gloss definition|[[use]]d to [[conect]] a [[subordinate]] [[clause]] [[indicate|indicating]] [[concession]] to a [[main]] [[clause]]}}; [[but]]
+# {{non-gloss definition|[[use]]d to [[connect]] a [[subordinate]] [[clause]] [[indicate|indicating]] [[concession]] to a [[main]] [[clause]]}}; [[but]]
 #: ''lai kāds dzērājs Vanags, '''bet''' ataugu viņš taupīja, ragavām ilksi, pat to viņš neļāva nocirst savā mežā'' — that Vanags may be a drunkard, '''but''' he conserved the (new) forest growth, sleigh lumber (= wood for making sleighs), he didn't let it be cut in his forest
 # {{context|in [[combination]]s like {{term|ne|lang=lv}} {term|vien|lang=lv}} ..., {{term|bet|lang=lv}} {{term|arī|lang=lv}}, {{term|ne|lang=lv}} {{term|tikai|lang=lv}} ..., {{term|bet|lang=lv}} {{term|arī|lang=lv}}, {{term|ne|lang=lv}} {{term|tikvien|lang=lv}} ..., {{term|bet|lang=lv}} {{term|arī|lang=lv}} {{non-gloss definition|[[use]]d to [[coordinate]] [[clause]] [[element]]s}}; [[not]] [[only]] ..., [[but]] [[also]]
 #: ''riekstu eļļa noder '''ne vien''' uzturam, '''bet arī''' parfimērijas un laku pagatavošanai'' — hazelnut oil is useful '''not only''' for consumption, '''but also''' for perfume and varnish producers
