--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -301,6 +301,9 @@ From {{etyl|gem-pro|odt}} {{recons|þingan|lang=gem-pro}}.
 # [[#English|thing]], [[object]]
 # [[case]], [[matter]], [[issue]]
 
+====Declension====
+{{odt-decl-table|head=thing|thing|thing|thingis|thinge|thing|thing|thingo|thingon}}
+
 ====Descendants====
 * Dutch: {{l|nl|ding}}
 
