--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -51,6 +51,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Irish: {{t-|ga|cat coille|m}}, {{t-|ga|toghán|m}}
 * Italian: {{t-|it|puzzola|f}}
 * Japanese: {{t-|ja|ケナガイタチ|tr=kenagaitachi|sc=Jpan}}, {{t-|ja|ヨーロッパケナガイタチ|tr=Yōroppa kenagaitachi|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|pitouais|m}}
 * Latgalian: {{tø|ltg|saskys|m}}
 * Latin: {{t-|la|mustella}}
 * Latvian: {{t-|lv|sesks}}
