--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * Interlingua: [[quaccar]]
 * Italian: [[fare]] [[qua qua]]
 * Japanese: {{qualifier|duck}} {{t-|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t-|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
+* Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
 * Polish: {{t-|pl|kwakać}}
 * Romanian: [[măcăi]]
 * Russian: [[крякать]] (kr'ákat’) {{impf}}, [[крякнуть]] (kr'áknut’) {{pf.}}
