--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -10,6 +10,7 @@
 {{trans-top|a utensil}}
 * Bulgarian: {{t-|bg|черпак}}
 * French: {{t+|fr|écope|f}}
+* Maori: {{t|mi|tīheru}}
 * Swedish: {{t-|sv|öskar|n}}
 {{trans-mid}}
 {{trans-bottom}}
