--- a/en/d/diageneses.776700.wikitext
+++ b/en/d/diageneses.776700.wikitext
@@ -5,7 +5,7 @@
 
 # {{plural of|diagenesis}}
 
-[[Category:English plurals ending in "-es"]]
+[[Category:English irregular plurals ending in "-es"]]
 
 [[ar:diageneses]]
 [[fr:diageneses]]
