/* Noun */plural category using [[Project:AWB|AWB]] <mitoses#20044183>

--- a/en/m/mitoses.720279.wikitext
+++ b/en/m/mitoses.720279.wikitext
@@ -20,7 +20,7 @@
 
 # {{plural of|mitose|lang=fr}}
 
-[[Category:English plurals ending in "-es"]]
+[[Category:English irregular plurals ending in "-es"]]
 
 [[ar:mitoses]]
 [[fr:mitoses]]
