--- a/en/t/tmeses.776981.wikitext
+++ b/en/t/tmeses.776981.wikitext
@@ -5,7 +5,7 @@
 
 # {{plural of|tmesis}}
 
-[[Category:English plurals ending in "-es"]]
+[[Category:English irregular plurals ending in "-es"]]
 
 ----
 
