--- a/en/s/swifter.720151.wikitext
+++ b/en/s/swifter.720151.wikitext
@@ -1,11 +1,23 @@
 ==English==
 
-===Adjective===
+===Etymology 1===
+
+====Adjective====
 '''swifter'''
 
 # {{comparative of|swift}}
 
-===Verb===
+===Etymology 2===
+Compare {{term|swivel|lang=en}}.
+
+====Noun====
+{{en-noun}}
+
+# {{nautical}} A rope used to retain the bars of the [[capstan]] in their sockets while it is being turned.
+# {{nautical}} A rope used to encircle a boat longitudinally, to strengthen and defend her sides.
+# {{nautical}} The [[forward]] [[shroud]] of a lower [[mast]].
+
+====Verb====
 {{en-verb}}
 
 # {{nautical|transitive}} To [[tighten]] (e.g. slack standing [[rigging]]) by bringing the opposite [[shroud]]s nearer.
