--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -46,8 +46,10 @@
 ====Translations====
 {{trans-top|language}}
 * Catalan: {{t|ca|lígur|m}}
+* French: {{t|fr|ligurien|m}}
 * Galician: {{t|gl|lígur|m}}
 {{trans-mid}}
+* {{trreq|Ligurian}}
 * Portuguese: {{t|pt|lígure|m}}, {{t|pt|ligúrio|m}}
 * Spanish: {{t|es|ligur}}
 {{trans-bottom}}
