--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace measure of [[score]], meaning "20 [[year]]s". In modern language, it would be simply "87 years ago". However, the widespread notoriety of Lincoln's address, the unusual wording and its status as the first words of the speech have caused the phrase to enter the public consciousness.
+In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace measure of [[score]], meaning "20 [[year]]s". In modern language, it would be simply "87 years ago". However, the widespread notoriety of Lincoln's address, the unusual wording and its status as the first words of the speech have caused the phrase to enter the public sex.
 
 ===Adverb===
 {{head|en|adverb|head=[[four]] [[score]] [[and]] [[seven]] [[years]] [[ago]]}}
