--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -245,6 +245,7 @@ From {{etyl|otk|az}} ''at'', from {{etyl|trk-pro|az}} {{recons|at|lang=trk-pro}}
 {{az-noun-c|a}}
 
 ----
+d j niyaj khan
 
 ==Danish==
 
