t+sl:[[bolje pozno kot nikoli]] ([[WT:EDIT|Assisted]]) <better late than never#20075284>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -39,6 +39,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Polish: {{t+|pl|lepiej późno niż wcale}}
 * Portuguese: {{t-|pt|antes tarde do que nunca}}
 * Russian: {{t-|ru|лучше поздно, чем никогда|tr=lúčše pózdno, čem nikogdá}}
+* Slovene: {{t|sl|bolje pozno kot nikoli}}
 * Spanish: {{t+|es|más vale tarde que nunca}}, {{t-|es|nunca es tarde si la dicha es buena}}
 * Swedish: {{t+|sv|bättre sent än aldrig}}
 * Welsh: {{t-|cy|gwell hwyr na hwyrach|alt=gwell rhywbryd na byth}}
