--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+[[File:Quadrilateral ABCDE.png|thumb|right|200px|quadrilateral]]
 ===Etymology===
 : From {{etyl|la}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (sided)
 
