--- a/en/k/kaen.855484.wikitext
+++ b/en/k/kaen.855484.wikitext
@@ -1,10 +1,7 @@
 ==Japanese==
-{{wikipedia|Kaen (disambiguation)}}
-===Noun===
-{{ja-noun|r|hira=かえん}}
 
-# {{ja-def|火炎|火焔}} [[flame]], [[blaze]]
-# {{ja-def|花園}} [[flower]] [[garden]]
+===Romanization===
+{{ja-romaji|かえん}}
 
 [[eo:kaen]]
 [[mg:kaen]]
