--- a/en/k/kluit.4474.wikitext
+++ b/en/k/kluit.4474.wikitext
@@ -1,7 +1,10 @@
 ==Dutch==
 
+===Etymology===
+Cognate with English {{term|cloud|||lang=en}}. Related to Dutch {{term|kloot||ball; testicle|lang=nl}} and {{term|klont||lump|lang=nl}}.
+
 ===Noun===
-{{nl-noun|f|g2=m|kluiten|kluitje}}
+{{nl-noun|f|kluiten|kluitje}}
 
 # [[lump]], [[clod]] (mostly in connection to [[earth]] or [[soil]])
 #: '''Expressions / Idioms'''
