# Carlyle  #*: '''Quacks''' political; quacks scientific, academical. <quack#20122965>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -90,7 +90,9 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 #*: After ſome Months, the '''Quack''' gets privately to Town, [...]
 #* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
 #*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
-# A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]!'' -->
+# A [[charlatan]].
+# Carlyle
+#*: '''Quacks''' political; quacks scientific, academical.
 # {{slang}} A [[doctor]].
 
 =====Synonyms=====
