--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -133,7 +133,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * {{trreq|gu}}
 * Haitian Creole: {{tø|ht|senp}}
 * {{trreq|ha}}
-* {{trreq|haw}}
+* Hawaiian: {{tø|haw|maʻalahi}}
 * Hebrew: {{t-|he|פשוט}}
 * Hindi: {{t-|hi|सरल|tr=saral|sc=Deva}}, {{qualifier|easy}} {{t-|hi|आसान|tr=āsān|sc=Deva}}
 * Hungarian: {{t+|hu|egyszerű}}
