--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -2,7 +2,7 @@
 [[File:Bleeding finger.jpg|thumb|250px|upright|A bleeding wound on a finger.]]
 
 ===Etymology===
-From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|blōþijanan||to bleed|lang=gem-pro}}, from {{etyl|gem-pro|en}} {{recons|blōþan||blood|lang=gem-pro}}.
+From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|blōþijaną||to bleed|lang=gem-pro}}, from {{etyl|gem-pro|en}} {{recons|blōþą||blood|lang=gem-pro}}.
 
 ===Pronunciation===
 * {{IPA|/ˈbliːd/}}, {{X-SAMPA|/"bli:d/}}
