--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -16,6 +16,7 @@ From {{etyl|xno}} {{term|genette|lang=fro}}, {{etyl|frm}} {{term|genette|lang=fr
 {{en-noun}}
 
 # Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the genus {{taxlink|Genetta|genus}} in the family [[Viverridae]], most of which have a spotted coat and a long, ringed tail.
+# The [[fur]] of this mammal, or any skin dressed in imitation of it.
 
 =====Translations=====
 {{trans-top|mammal of the genus ''Genetta''}}
