--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -12,7 +12,7 @@
 * {{homophones|rabbet}}
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{etyl|fr|-}} dialect {{term|rabbotte|lang=frm}}, {{term|rabouillet||baby rabbit|lang=frm}}), from {{etyl|wa}} {{term|robète|lang=wa}}, diminutive of {{etyl|dum}} {{term|robbe||rabbit; seal|lang=dum}} (compare {{etyl|nl|-}} {{term|rob||rabbit|lang=nl}}, {{term|rob||seal|lang=nl}}), from Middle Low German {{term|robbe||seal|lang=gml}} (compare dialectal Low German {{term||Rubb}}, {{term|Robb|lang=nds}}, dialectal German {{term|Robbe||seal|lang=de}}), from {{term|rubben||ro rub|lang=gml}}. More at {{l|en|rub}}.
+From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{etyl|fr|-}} dialect {{term|rabbotte|lang=frm}}, {{term|rabouillet||baby rabbit|lang=frm}}), from {{etyl|wa}} {{term|robète|lang=wa}}, diminutive of {{etyl|dum}} {{term|robbe||rabbit; seal|lang=dum}} (compare {{etyl|nl|-}} {{term|rob||rabbit|lang=nl}}, {{term|rob||seal|lang=nl}}), from Middle Low German {{term|robbe||seal|lang=gml}} (compare dialectal Low German {{term||Rubb}}, {{term|Robb|lang=nds}}, German {{term|Robbe||seal|lang=de}}), from {{term|rubben||ro rub|lang=gml}}. More at {{l|en|rub}}.
 
 ====Noun====
 {{en-noun}}
