--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -42,8 +42,7 @@ From {{etyl|goh|de}} {{term|bitten|lang=goh}}, from {{etyl|gem-pro|de}} {{recons
 * {{audio|De-at-bitten.ogg|audio (Austria)}}
 
 ===Verb===
-{{de-verb}}
-
+{{de-verb-strong|class=5|bittet|bat|gebeten}}
 # {{transitive|or|intransitive}} To [[ask]]; to [[beg]]; to [[plead]]; to [[request]].
 
 ====Conjugation====
