--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -55,7 +55,6 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ----
 
 ==Japanese==
-
 ===Kanji===
 {{ja-kanji|grade=1|rs=月00}}
 
@@ -137,6 +136,10 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 #: {{usex|'''月'''は地球の唯一の衛星です。|tr='''つき'''はちきゅうのゆいいつのえいせいです。<br/>'''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''|t='''Moon''' is the only one [[satellite]] of the [[Earth]].|lang=ja}}
 # the [[lunar]] [[cycle]], a [[month]]
 #: {{usex|'''月'''に一度、旅行に出かけます。|tr='''つき'''にいちど、りょこうにでかけます。<br/>'''''Tsuki''' ni ichido, ryokō ni dekake masu.''|t=I go for a trip once a '''month'''.|lang=ja}}
+# {{tarot|lang=ja}}: The [[moon|Moon]]; the eighteenth [[trump]] or [[major arcana]] [[card]] in most traditional Tarot decks.  
+
+====Coordinate terms====
+* [[タロット]] (''[[tarotto]]''):  The [[tarot]].  
 
 ====Synonyms====
 * {{sense|the moon}} {{l|ja|太陰}}, {{l|ja|ムーン}}
