--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -76,7 +76,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 *: Tashelhit: {{tø|shi|dax}}
 * Breton: {{t+|br|adarre}}
 * Bulgarian: {{t+|bg|отново|tr=otnovo}}, {{t+|bg|пак|tr=pak}}, {{t+|bg|отново|tr=otnovo|sc=Cyrl}}, {{t+|bg|пак|tr=pak|sc=Cyrl}}
-* Burmese: {{t-|my|နောက်တဖန်|sc=Mymr|tr=nauktăhpan}}
+* Burmese: {{t-|my|နောက်တဖန်|sc=Mymr|tr=nauktăhpan}}, {{t|my|ထပ်|tr=htat|sc=Mymr}}
 * Catalan: {{t-|ca|una altra vegada}}, {{t-|ca|de nou}}
 * Cherokee: {{t-|chr|ᎠᏏᏇ|tr=asique|sc=Cher}}
 * Chinese:
