t+my:[[ဝါး]] t-balance ([[WT:EDIT|Assisted]]) <bamboo#20156203>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -30,6 +30,7 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * Banjarese: {{tø|bjn|buluh}}, {{tø|bjn|paring}}
 * Bengali: {{t-|bn|বাঁশ|tr=bãsh|sc=Beng}}
 * Bulgarian: {{t-|bg|бамбук|m|tr=bambúk}}
+* Burmese: {{t|my|ဝါး|tr=wa:|sc=Mymr}}
 * Catalan: {{t-|ca|bambú|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|竹子|tr=zhúzi|sc=Hani}}
@@ -43,8 +44,8 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Hindi: {{t-|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
-* Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
 {{trans-mid}}
+* Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
