--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -21,7 +21,8 @@ From {{term|bend}}.
 # {{derogatory|colloquial|chiefly|UK}} [[homosexual|Homosexual]].
 # [[determined|Determined]] or [[insistent]].
 #: ''He was '''bent''' on going to Texas, but not even he could say why.''
-# Of a person leading a life of [[crime]].
+#: ''They were '''bent''' on mischief.''
+# Of a person, leading a life of [[crime]].
 # {{slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
 # {{colloquial|chiefly|US}} Suffering from [[the bends]]
