betting is more than just making a guess <bet#20159172>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -67,7 +67,11 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 ====Verb====
 {{en-verb|bets|betting|'''bet '''or''' [[betted]]'''}}
 
-# To agree that payment be made to the successful forecaster of the result of an event (usually sporting) by the other party in the agreement. To make a [[guess]] about the [[outcome]] of an event.
+# To [[stake]] or [[pledge]] upon the outcome of an event; to [[wager]].
+#* Shakespeare
+#*: John a Gaunt loved him well, and '''betted''' much money on his head.
+#* O. W. Holmes
+#*: I'll '''bet''' you two to one I'll make him do it.
 # To be [[sure]] of something; to be able to [[count]] on something.
 #: ''You '''bet'''!''
 # {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
@@ -82,7 +86,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 {{rel-bottom}}
 
 =====Translations=====
-{{trans-top|To make a guess about the outcome of an event}}
+{{trans-top|To stake or pledge upon the outcome of an event}}
 * Arabic: {{t-|ar|راهن|tr=raahana}}
 * Basque: {{t-|eu|apustu egin}}
 * Breton: {{t-|br|klaoustreañ}}
