--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -78,7 +78,7 @@ From the prefix [[mega-]].
 ==Faroese==
 
 ===Etymology===
-From {{etyl|non|fo}} {{term|mega|lang=non}}, from {{etyl|gem-pro|fo}} {{recons|maganan|lang=gem-pro}}, from {{etyl|ine-pro|fo}} {{recons|magʰ-|lang=ine-pro}}, {{recons|megʰ-|lang=ine-pro}}.
+From {{etyl|non|fo}} {{term|mega|lang=non}}, from {{etyl|gem-pro|fo}} {{recons|maganą|lang=gem-pro}}, from {{etyl|ine-pro|fo}} {{recons|magʰ-|lang=ine-pro}}, {{recons|megʰ-|lang=ine-pro}}.
 
 ===Verb===
 {{head|fo|verb}}
@@ -93,7 +93,7 @@ From {{etyl|non|fo}} {{term|mega|lang=non}}, from {{etyl|gem-pro|fo}} {{recons|m
 ==Icelandic==
 
 ===Etymology===
-From {{etyl|non|is}} {{term|mega|lang=non}}, from {{etyl|gem-pro|is}} {{recons|maganan|lang=gem-pro}}, from {{etyl|ine-pro|is}} {{recons|magʰ-|lang=ine-pro}}, {{recons|megʰ-|lang=ine-pro}}.
+From {{etyl|non|is}} {{term|mega|lang=non}}, from {{etyl|gem-pro|is}} {{recons|maganą|lang=gem-pro}}, from {{etyl|ine-pro|is}} {{recons|magʰ-|lang=ine-pro}}, {{recons|megʰ-|lang=ine-pro}}.
 
 ===Pronunciation===
 * {{IPA|/ˈmeiːɣa/|lang=is}}
