Reverted edits by [[Special:Contributions/219.90.94.90|219.90.94.90]]. If you think this rollback is in error, please leave a message on my talkpage. <staff#20166807>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -1,7 +1,199 @@
 {{also|Staff}}
-YEEEEEEEEEEY
+==English==
+{{wikipedia}}
+[[File:John William Waterhouse - Magic Circle.JPG|thumb|A woman drawing a circle with a staff]]
 
-hjkjkhjkhjkjh
+===Etymology===
+{{etyl|ang}} {{term|stæf|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|stabaz|lang=gem-pro}}. Cognate with Dutch {{term|staf|lang=nl}}, German {{term|Stab|lang=de}}, Swedish {{term|stav|lang=sv}}. Sense of "group of military officers that assists a commander", attested from 1702, is influenced from German {{term|Stab|lang=de}}.
+
+===Pronunciation===
+* {{a|RP}} {{enPR|stäf}}, {{IPA|/stɑːf/}}, {{X-SAMPA|stA:f}}
+* {{rhymes|ɑːf}}
+* {{a|North America|Northern England}} {{IPA|/ˈstæf/}}
+* {{audio|En-us-staff.ogg|Audio (US)}}
+* {{rhymes|æf}}
+
+===Noun===
+{{en-noun|s|pl2=staves|pl3=staff|-}}
+[[Image:Music-staff.png|thumb|right|A musical staff]]
+
+# {{context|plural [[staffs]] or [[staves]]}} a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
+# {{music|plural [[staves]]}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
+# {{context|plural staff}} The [[employee]]s of a [[business]].
+#* {{quote-news
+|year=2011
+|date=December 16
+|author=Denis Campbell
+|title=Hospital staff 'lack skills to cope with dementia patients'
+|work=Guardian
+|url=http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients
+|page=
+|passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions.''}}
+#: ''The company employed 10 new members of '''staff''' this month.''
+# {{uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering (see [[w:Staff (building material)|Wikipedia article]])
+
+====Synonyms====
+* {{sense|music}} [[stave]]
+* {{sense|employees}} [[personnel]]
+* See also [[Wikisaurus:stick]]
+
+====Related terms====
+* [[member of staff]]
+* [[quarterstaff]]
+
+====Translations====
+{{trans-top|long, straight stick}}
+* Armenian: {{t-|hy|ցուպ|tr=c’up}}, {{t-|hy|ձեռնափայտ|tr=jeṙnap’ayt}}, {{t-|hy|գավազան|tr=gavazan}}
+* Basque: {{t-|eu|haga}}
+* Catalan: {{t-|ca|bastó|m}}
+* Chamicuro: {{tø|ccc|chaskolo}}
+* Czech: {{t+|cs|hůl|f}}
+* Danish: {{t-|da|stav|c}}; {{t-|da|stang|c}}
+* Dutch: {{t+|nl|staf|c}}
+* Esperanto: {{t-|eo|bastono}}
+* Finnish: {{t+|fi|sauva}}, {{t-|fi|salko}}
+* French: {{t+|fr|bâton|m}}, {{t+|fr|canne|f}}
+* German: {{t+|de|Stab|m}}
+* Greek: {{t+|el|ράβδος|f|tr=rávdos|sc=Grek}}, {{t+|el|ραβδί|n|tr=ravdí|sc=Grek}}
+* Hebrew: {{t-|he|מקל|m|alt=מַקֵּל}}
+* Ido: [[bastono]]
+* Indonesian: [[toya]]
+{{trans-mid}}
+* Italian: {{t+|it|bastone|m}}, {{t+|it|asta|f}}
+* Latin: {{t-|la|baculum}}
+* Macedonian: {{t-|mk|стап|m|tr=stap}}
+* Polish: {{t+|pl|laska|f}}, {{t+|pl|kij|m}}
+* Portuguese: {{t+|pt|cajado|m}}
+* Russian: {{t+|ru|посох|m|tr=pósox}}
+* Scottish Gaelic: {{t-|gd|bata|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|штап|m|alt=шта̑п|sc=Cyrl}}
+*: Roman: {{t-|sh|štap|m|alt=štȃp}}
+* Slovak: {{t+|sk|palica|f}}, {{t-|sk|žrď|f}}, {{t-|sk|bakuľa|f}}
+* Spanish: {{t+|es|bastón|m}}, {{t+|es|báculo|m}}
+* Swedish: {{t+|sv|stav|c}}
+* Zulu: {{t-|zu|induku|c9|c10}}
+{{trans-bottom}}
+
+{{trans-top|series of horizontal lines}}
+* Catalan: {{t-|ca|pentagrama|m}}
+* Czech: {{t-|cs|osnova|f}}
+* Dutch: [[balk]] {{m}}, [[notenbalk]] {{m}}
+* Finnish: {{t-|fi|nuottiviivasto}}
+* French: {{t+|fr|portée|f}}
+* German: [[Notenlinien]] {{f|p}}
+* Greek: {{t+|el|πεντάγραμμο|n|tr=pentágrammo|sc=Grek}}
+{{trans-mid}}
+* Italian: {{t+|it|pentagramma|m}}
+* Macedonian: {{t-|mk|петолиние|n|tr=petolínie}}
+* Polish: {{t-|pl|pięciolinia|f}}
+* Portuguese: {{t+|pt|pauta|f}}
+* Russian: {{t-|ru|нотный стан|m|tr=nótnyj stan}}
+* Scottish Gaelic: {{t-|gd|cliabh|m}}
+* Spanish: {{t-|es|varas|f|p}}, {{t-|es|pauta|f}}, {{t+|es|pentagrama|f}}
+{{trans-bottom}}
+
+{{trans-top|employees of a business}}
+* Catalan: {{t+|ca|staff|m}}, {{t-|ca|plantilla|f}}
+* Chinese:
+*: Mandarin: {{t|cmn|員工|sc=Hani}}, {{t|cmn|员工|tr=yuángōng|sc=Hani}}, {{t|cmn|人員|sc=Hani}}, {{t|cmn|人员|tr=rényuán|sc=Hani}}, {{t|cmn|工作人員|sc=Hani}}, {{t|cmn|工作人员|tr=gōngzuò rényuán|sc=Hani}}
+* Czech: {{t-|cs|personál|m}}
+* Danish: {{t-|da|stab|c}}, {{t-|da|personale|n}}
+* Dutch: {{t+|nl|medewerkers|p}}, {{t+|nl|personeel|n}}
+* Finnish: {{t-|fi|henkilöstö}}, {{t-|fi|henkilökunta}}
+* French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
+* German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}
+* Greek: {{t+|el|προσωπικό|n|tr=prosopikó|sc=Grek}}, {{t+|el|επιτελείο|n|tr=epiteleío|sc=Grek}}
+* Italian: {{t+|it|personale|m}}, {{t+|it|organico|m}}
+{{trans-mid}}
+* Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
+* Macedonian: {{t-|mk|персонал|m|tr=personál}}, {{t-|mk|кадар|m|tr=kádar}}
+* Polish: {{t+|pl|personel|m}}, {{t-|pl|pracownicy|p}}
+* Portuguese: {{t+|pt|pessoal|m}}
+* Russian: {{t+|ru|персонал|m|tr=personál}}, {{t+|ru|кадр|m|p|tr=kádry|alt=кадры|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|особље|n|sc=Cyrl}}
+*: Roman: {{t-|sh|osoblje|n}}
+* Spanish: {{t+|es|personal|m}}, {{t+|es|equipo|m}}, {{t+|es|empleado|m}}
+* Swedish: {{t+|sv|personal|c}}
+* Uyghur: {{t-|ug|خىزمەتچى|tr=xizmetchi|sc=ug-Arab}}
+* Volapük: {{qualifier|collective}} {{t+|vo|pösodef}}
+{{trans-bottom}}
+
+====See also====
+* [[truncheon]]
+* [[club]]
+* [[cudgel]]
+* [[stick]]
+* [[baton]]
+* [[bludgeon]]
+* [[rod]]
+* [[cane]]
+
+===Verb===
+{{en-verb}}
+
+# {{transitive}} to [[supply]] (a business) with [[employee]]s
+
+====Translations====
+{{trans-top|to supply with employees}}
+* Danish: forsyne med personale
+* Finnish: {{t+|fi|miehittää}}
+* French: doter en personnel
+{{trans-mid}}
+* Greek: {{t+|el|επανδρώνω|tr=epandróno|sc=Grek}}
+* Welsh: {{t+|cy|staffio}}
+{{trans-bottom}}
+
+===Anagrams===
+* [[taffs#English|taffs]]
+
+[[Category:English nouns with irregular plurals]]
+[[Category:English politically correct terms]]
+[[Category:English words with multiple plurals]]
+
+----
+
+==French==
+{{wikipedia|lang=fr}}
+
+===Etymology 1===
+19th century - Obscure, possibly from {{etyl|de|fr}} {{term|staffieren|lang=de}} or Old French {{term|estofer|lang=fro}} (modern French {{term|étoffer|lang=fr}})
+
+====Pronunciation====
+* {{IPA|/staf/|lang=fr}}
+
+====Noun====
+{{fr-noun|m}}
+
+# [[#English|staff]], mixture of plaster and fibre.
+#: ''Le '''staff''' apparaît grâce au Français Mézier qui vers 1850 a l'idée de réaliser une première corniche préfabriquée armée d'une toile de jute. Dès lors l'emploi du '''staff''' se développe rapidement jusqu'à atteindre son apogée à la belle époque.'' (Wikipédia)
+
+=====Derived terms=====
+* {{l|fr|staffer}}
+* {{l|fr|staffeur}}
+
+===Etymology 2===
+20th century - from {{etyl|en|fr}} {{term|staff|lang=en}}
+
+====Pronunciation====
+* {{IPA|/staf/|lang=fr}}
+
+====Noun====
+{{fr-noun|m}}
+
+# [[#English|staff]], employees of a business.
+#: ''les membres du '''staff'''.''
+# [[governing]] [[body]] (army, corporation, administration, etc.)
+#: ''Il avait été prévu une centaine d'infirmiers et un '''staff''' comprenant le médecin-chef, deux assistants, six internes.'' (H. Bazin, Fin asiles, 1959, p. 81)
+
+=====Synonyms=====
+* {{l|fr|équipe}}, {{l|fr|personnel}}
+
+===References===
+* {{R:TLFi}}
+
+----
 
 ==Italian==
 
