Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <yeah#20168147>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -34,7 +34,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Hindi: {{t+|hi|हाँ|tr=hā̃|sc=Deva}}
 * Hungarian: {{t+|hu|igen}}
 * Icelandic: {{t+|is|já}}
-* Interlingua: [[si#Interlingua|si]]
+* Interlingua: {{t|ia|si}}
 * Italian: {{t+|it|si}}, {{t+|it|già}}
 * Japanese: {{t-|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
 * Korean: {{t+|ko|네|tr=ne|sc=Kore}}, {{t+|ko|예|tr=ye|sc=Kore}}, {{t+|ko|응|tr=eung|sc=Kore}}, {{t+|ko|응|tr=eo|sc=Kore}}
@@ -54,8 +54,8 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Swedish: {{t+|sv|ja|n}}
 * Urdu: {{t-|ur|ہاں|tr=hā̃|sc=ur-Arab}}
 * Vietnamese: {{t-|vi|ừ}} {{qualifier|informal}}<!-- does translate as "yeah" -->, {{t+|vi|ờ}} {{qualifier|informal}}<!-- also translates as "yeah" -->
-* Volapük: [[si#Volapük|si]]
-* Welsh: [[iah]]
+* Volapük: {{t|vo|si}}
+* Welsh: {{t|cy|iah}}
 {{trans-bottom}}
 
 ====Synonyms====
@@ -78,7 +78,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 * Greek: {{t+|el|ναι|tr=nai}}
 {{trans-mid}}
 * Japanese: {{t-|ja|うん|tr=un|sc=Jpan}}
-* Portuguese: [[é!]], [[isso aí!]]
+* Portuguese: {{t|pt|é!}}, {{t|pt|isso aí!}}
 * Russian: {{t|ru|да|tr=da|alt=да!|sc=Cyrl}}, {{t|ru|ура|tr=ura|alt=ура!|sc=Cyrl}}, {{t|ru|э-гей|tr=e-gej|alt=э-гей!|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -93,7 +93,7 @@ Alternative etymology derives ''yeah'' from a drawling pronunciation of {{term|y
 
 ====Translations====
 {{trans-top|expressing joy}}
-* Dutch: [[euh]]
+* Dutch: {{t|nl|euh}}
 * Finnish: {{t-|fi|jee}}
 {{trans-mid}}
 * Japanese: {{t-|ja|やった}} (yatta)
