--- a/en/v/voornaam.4105.wikitext
+++ b/en/v/voornaam.4105.wikitext
@@ -37,6 +37,7 @@ From {{etyl|dum|nl}} {{term|voorneem|lang=dum}}, {{term|voornaem|lang=dum}}, fro
 * {{l|nl|voornamelijk}}
 
 [[Category:nl:Onomastics]]
+[[Category:Dutch heteronyms]]
 
 [[fr:voornaam]]
 [[id:voornaam]]
