/* English */ used in UK too.  ===Noun===  {{en-noun}}    # The lodging of soldiers. <billeting#20172292>

--- a/en/b/billeting.855683.wikitext
+++ b/en/b/billeting.855683.wikitext
@@ -1,12 +1,17 @@
 ==English==
 
 ===Alternative forms===
-* (UK) [[billetting]]
+* {{qualifier|UK|archaic}} [[billetting]]
 
 ===Verb===
 '''billeting'''
 
-# {{US}} {{present participle of|billet}}
+# {{present participle of|billet}}
+
+===Noun===
+{{en-noun}}
+
+# The lodging of soldiers.
 
 [[fr:billeting]]
 [[vi:billeting]]
