--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -182,11 +182,11 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 *: Sorani: {{t+|ku|به‌راز}} {{g|ku}}
 * Kyrgyz: {{t-|ky|чочко|tr=çoçko|sc=Cyrl}}
 * Ladin: {{tø|lld|porcel}}
-{{trans-mid}}
 * Lao: {{t+|lo|ໝູ|tr=mŭː|sc=Laoo}}
 * Latgalian: {{tø|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Lower Sorbian: {{tø|dsb|swinja|f}}
 * Luganda: {{tø|lg|embizzi}}
@@ -251,6 +251,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Welsh: {{t+|cy|mochyn|m}}
 * West Frisian: {{t-|fy|baarch|c}}
 * Wolof: {{t-|wo|mbam-xuux|alt=mbam-xuux mi}}
+* Yiddish: {{t-|yi|חזיר|tr=khazer|m}}
 * {{trreq|zu}}
 {{trans-bottom}}
 
