--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -25,7 +25,7 @@ From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|was
 {{bottom}}
 
 ===Etymology 2===
-From {{etyl|dum|nl}} {{term|wassen|lang=dum}}, from {{etyl|odt|nl}} {{term|wahsan|lang=odt}}, {{term|wassan|lang=odt}}, from {{etyl|gem-pro|nl}} {{recons|wahsijaną||to increase|lang=gem-pro}}, from {{etyl|ine-pro|nl}} {{recons|awek-|lang=ine-pro}}, {{recons|aweg-||to increase|lang=ine-pro}}. Cognate with {{etyl|de|-}} {{term|wachsen||to grow, expand, increase|lang=de}}, {{etyl|fy|-}} {{term|waakse||to grow, accrue|lang=fy}}, {{etyl|en|-}} {{term|wax||to grow, increase|lang=en}}. More at {{l|en|wax}}.
+From {{etyl|dum|nl}} {{term|wassen|lang=dum}}, from {{etyl|odt|nl}} {{term|wahsan|lang=odt}}, {{term|wassan|lang=odt}}, from {{etyl|gem-pro|nl}} {{recons|wahsijaną||to increase|lang=gem-pro}}, from {{etyl|ine-pro|nl}} {{recons|h₂weg-|lang=ine-pro}}, {{recons|awek-|lang=ine-pro}}, {{recons|aweg-||to increase|lang=ine-pro}}. Cognate with {{etyl|nds|-}} {{term|wassen|lang=nds}}, {{etyl|de|-}} {{term|wachsen||to grow, expand, increase|lang=de}}, {{etyl|fy|-}} {{term|waakse||to grow, accrue|lang=fy}}, {{etyl|en|-}} {{term|wax||to grow, increase|lang=en}}, {{etyl|da|-}} {{term|vokse|lang=da}}. More at {{l|en|wax}}.
 
 ====Verb====
 {{nl-verb}}
