--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 {{trans-top|of or pertaining to a vector}}
 * French: {{t+|fr|vectoriel}}
+* German: {{t-|de|vektoriell}}
 * Italian: {{t-|it|vettoriale}}
 * Portuguese: {{t+|pt|vectorial}}
 {{trans-mid}}
