don't put links in usexes <bound#20207934>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm}} {{term|bounde|lang=en}}, from {{etyl|fro}} {{term|bunne|lang=e
 {{en-noun}}
 
 # {{often|used in plural}} A [[boundary]], the [[border]] which one must [[cross]] in order to enter or leave a territory.
-#: ''I reached the northern '''bound''' of my [[property]], took a deep [[breath]] and walked on.''
+#: ''I reached the northern '''bound''' of my property, took a deep breath and walked on.''
 #: ''Somewhere within these '''bounds''' you may find a buried treasure.''
 # {{mathematics}} a [[value]] which is known to be greater or smaller than a given [[set]] of values
 
@@ -158,7 +158,7 @@ From {{etyl|fr}} {{term|bondir||to leap, bound, originally make a loud resoundin
 {{en-noun}}
 
 # A sizeable [[jump]], great leap.
-#: ''The [[deer]] crossed the [[stream]] in a single '''bound'''.
+#: ''The deer crossed the stream in a single '''bound'''.
 
 =====Derived terms=====
 * [[by leaps and bounds]]
