--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -155,9 +155,14 @@
 ===Verb===
 {{en-verb|whistl|ing}}
 
-# To make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
-# To move in such a way as to create a whistling sound.
+# {{ambitransitive}} To make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
+#: ''Never '''whistle''' at a funeral.''
+#: ''She was '''whistling''' a happy tune.''
+# {{intransitive}} To move in such a way as to create a whistling sound.
 #: ''A bullet '''whistled''' past.''
+# {{transitive}} To send, signal, or call by a whistle.
+#* Addison
+#*: He chanced to miss his dog; we stood still till he had '''whistled''' him up.
 
 ====Derived terms====
 {{rel-top3|Terms derived from the verb ''whistle''}}
