--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -12,6 +12,8 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{en-noun|maxima|pl2=maximums}}
 
 # The [[high|highest]] [[limit]].
+#* P. Colquhoun
+#*: Good legislation is the art of conducting a nation to the '''maximum''' of happiness, and the minimum of misery.
 # {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]].
 # {{analysis}} An [[upper bound]] of a set which is also an element of that set.
 # {{statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
