--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -87,6 +87,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Khmer: {{t+|km|ប្រភេទ|tr=prɑpʰeit|sc=Khmr}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|вид|m|tr=vid|sc=Cyrl}}
+* Malay: {{t|ms|spesies}}
 * Norwegian: {{t+|no|art|m}}
 * Polish: {{t+|pl|gatunek|m}}
 * Portuguese: {{t+|pt|espécie}}
@@ -108,6 +109,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Khmer: {{t+|km|ប្រភេទ|tr=bro phet|sc=Khmr}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|вид|m|tr=vid}}, {{t-|mk|вид|m|tr=vid|sc=Cyrl}}
+* Malay: {{t|ms|spesies}}
 * Polish: {{t+|pl|gatunek|m}}
 * Portuguese: {{t+|pt|espécie}}
 * Russian: {{t+|ru|вид|tr=vid}}
