--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -246,7 +246,11 @@ Partly imitative, also influenced by {{term|burble}}.
 # {{intransitive}} To produce bubbles, to rise up in bubbles (such in foods cooking).
 # {{transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
-#*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government [...]
+#*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government {{...}}
+#* Addison
+#*: She has '''bubbled''' him out of his youth.
+#* Sterne
+#*: The great Locke, who was seldom outwitted by false sounds, was nevertheless '''bubbled''' here.
 # {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
 
 ====Quotations====
