--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -63,6 +63,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 * Polish: {{t+|pl|łasica|f}}
 * Portuguese: {{t+|pt|doninha}}
+* Romanian: {{t|ro|nevăstuică|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska}}
 * Scots: {{tø|sco|whitrat}}
 * Scottish Gaelic: {{t-|gd|neas|f}}, {{t-|gd|neas bheag|f}}
