--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -24,6 +24,10 @@ See [[bind]]
 {{en-adj|-}}
 
 # {{context|with infinitive}} [[obliged|Obliged]] (to).
+#*{{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
+|title=[[w:The Case of Miss Elliott|The Hocussing of Cigarette]]
+|chapter=5|url=http://openlibrary.org/works/OL8479084W
+|passage=Then I had a good think on the subject of the hocussing of Cigarette, and I was reluctantly '''bound''' to admit that once again the man in the corner had found the only possible solution to the mystery.}}
 #: ''You are not legally '''bound''' to reply.''
 # {{context|with infinitive}} Very [[likely]] (to).
 #: ''They were '''bound''' to come into conflict eventually.
