--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -33,7 +33,7 @@ Used with the definite article {{term|the}}.
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
 * Asturian: {{t-|ast|Balcanes|m}}
 * Bulgarian: {{t-|bg|Балкани|p|tr=Balkani|sc=Cyrl}}
-* Catalan: {{t-|ca|Balcans|m|p}}
+* Catalan: {{t-|ca|Balcans|m-p}}
 * Chinese:
 *: Mandarin: {{t|cmn|巴爾幹|sc=Hani}}, {{t|cmn|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t|cmn|巴爾幹半島|sc=Hani}}, {{t|cmn|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
 * Danish: {{t-|da|Balkanhalvøen}}
@@ -47,9 +47,9 @@ Used with the definite article {{term|the}}.
 * Japanese: {{t-|ja|バルカン半島|tr=[[Barukan hantō]]|sc=Jpan}}
 * Macedonian: {{t-|mk|Балкан|m|tr=Bálkan}}
 * Polish: {{t+|pl|Bałkany}}
-* Portuguese: {{t-|pt|Balcãs|m|p}}, {{t-|pt|Bálcãs|m|p}}
-* Romanian: {{t-|ro|Balcani|m|p}}, {{t-|ro|Peninsula Balcanică|f}}
-* Russian: {{t-|ru|Балканы|m|p|tr=Balkány}}
+* Portuguese: {{t-|pt|Balcãs|m-p}}, {{t-|pt|Bálcãs|m-p}}
+* Romanian: {{t-|ro|Balcani|m-p}}, {{t-|ro|Peninsula Balcanică|f}}
+* Russian: {{t-|ru|Балканы|m-p|tr=Balkány}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|Балкан|m|sc=Cyrl}}
 *: Roman: {{t-|sh|Balkan|m|sc=Latn}}
