expand per W1913 <blown#20300982>

--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -13,9 +13,14 @@
 {{en-adj|-}}
 
 # [[distended]], [[swollen]] or [[inflated]]
+#: ''Cattle are said to be '''blown''' when gorged with green food which develops gas.''
 # [[panting]] and [[out of breath]]
 # {{context|of glass}} [[form|Formed]] by [[blowing]]
 # Under the influence of [[drug]]s, especially [[marijuana]].
+# {{obsolete}} [[stale]]; [[worthless]]
+#* Sir Walter Scott
+#*: Their horses much '''blown'''.
+# Covered with the eggs and larvae of flies; [[flyblown]].
 
 ====Translations====
 {{trans-top|[[distended]], [[swollen]] or [[inflated]]}}
