--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -17,6 +17,10 @@ See [[bind]]
 {{en-verb form}}
 
 # {{en-past of|bind}}
+#*{{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
+|title=[[w:The Case of Miss Elliott|The Fate of the ''Artemis'']]
+|chapter=1|url=http://openlibrary.org/works/OL8479084W
+|passage=“[…] Captain Markam had been found lying half-insensible, gagged and '''bound''', on the floor of the sitting-room, his hands and feet tightly pinioned, and a woollen comforter wound closely round his mouth and neck ; whilst Mrs. Markham's jewel-case, containing valuable jewellery and the secret plans of Port Arthur, had disappeared.&nbsp;[…]”}}
 #: ''I '''bound''' the [[splint]] to my leg.
 #: ''I had '''bound''' the splint with [[duct tape]].
 
