--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -14,7 +14,7 @@
 
 # An often domesticated [[mammal]] rather like a [[weasel]], descended from the [[polecat]] and often trained to [[hunt]] [[burrow]]ing animals.
 # The [[black-footed ferret]], {{taxlink|Mustela nigripes|species}}.
-# An diligent [[searcher]].
+# A [[diligent]] [[searcher]].
 
 ====Synonyms====
 * {{sense|domesticated polecat}} {{taxlink|Mustela putorius furo|subspecies}}
