--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -55,7 +55,7 @@
 ==Portuguese==
 
 ===Etymology===
-From {{etyl|la|pt}} {{term|mundus||world|lang=la}}.
+From {{etyl|roa-ptg|pt}} {{term|mundo|lang=roa-ptg}}, from {{etyl|la|pt}} {{term|mundus||world|lang=la}}.
 
 ===Pronunciation===
 * {{a|Portugal|Brazil}} {{IPA|/ˈmũ.du/|lang=pt}}
@@ -64,10 +64,51 @@ From {{etyl|la|pt}} {{term|mundus||world|lang=la}}.
 ===Noun===
 {{pt-noun|m|s}}
 
-# [[world]]
+# {{uncountable|with article '''{{l/pt|o}}'''|lang=pt}} {{l/en|world}} {{gloss|the Universe}}
+#: {{usex|A Terra é o melhor planeta do '''mundo'''.|t=The Earth is the best planet in the '''world'''.|lang=pt}}
+# {{uncountable|with article '''{{l/pt|o}}'''|lang=pt}} {{l/en|world}} {{gloss|the Earth}}
+#: {{usex|A maior parte do '''mundo''' é coberta por água.|t=Most of the '''world''' is covered by water.|lang=pt}}
+# {{uncountable|with article '''{{l/pt|o}}'''|lang=pt}} {{l/en|humanity}} {{gloss|human beings collectively}}
+#: {{usex|O '''mundo''' inteiro viu aquilo.|t=The whole '''world''' saw that.|lang=pt}}
+# {{l/en|world}} {{gloss|everything related to a certain field}}
+#: {{usex|Habilidade é importante no '''mundo''' da música.|t=Skill is important in the '''world''' of music.|lang=pt}}
+# a {{l/en|large}}, {{l/en|distinct}} {{l/en|region}}
+#: {{usex|Para os europeus do século XV, a América era um novo '''mundo'''.|t=For 15th century Europeans, America was a new '''world'''.|lang=pt}}
+#: {{usex|Por enquanto, Marte é um '''mundo''' inabitado.|t=Mars is currently an uninhabited world.|lang=pt}}
+
+====Synonyms====
+* {{sense|the Universe}} {{l/pt|universo}}
+* {{sense|Earth}} {{l/pt|globo}}, {{l/pt|Terra}}
+* {{sense|humanity}} {{l/pt|homem}}, {{l/pt|humanidade}}
+* {{sense|everything related to a certain field}} {{l/pt|universo}}
+
+====Derived terms====
+* {{l/pt|mundinho}}, {{l/pt|mundozinho}} {{gloss|diminutives}}
+* {{l/pt|mundão}} {{gloss|augmentative}}
+{{top3}}
+* {{l/pt|correr mundo}}
+* {{l/pt|do outro mundo}}
+* {{l/pt|ir para o outro mundo}}
+* {{l/pt|meio mundo}}
+* {{l/pt|não ser deste mundo}}
+{{mid3}}
+* {{l/pt|novo mundo}}
+* {{l/pt|o melhor dos mundos}}
+* {{l/pt|primeiro mundo}}
+* {{l/pt|prometer mundos e fundos}}
+* {{l/pt|segundo mundo}}
+{{mid3}}
+* {{l/pt|terceiro mundo}}
+* {{l/pt|todo mundo}}
+* {{l/pt|velho mundo}}
+* {{l/pt|vir o mundo abaixo}}
+{{bottom}}
 
 ====Related terms====
-* [[mundial]], [[mundano]], [[mundão]], [[mundaréu]], [[todo mundo]]
+* {{l/pt|mapa múndi}}
+* {{l/pt|mundano}}
+* {{l/pt|mundaréu}}
+* {{l/pt|mundial}}
 
 ----
 
