--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -31,18 +31,17 @@
 
 ==German==
 
-===Pronunciation===
-* {{IPA|/ˈbɪtn̩/|ˈbɪtən|lang=de}}
-* {{audio|De-bitten.ogg|audio}}
-
 ===Etymology===
 From {{etyl|goh|de}} {{term|bitten|lang=goh}}, from {{etyl|gem-pro|de}} {{recons|bidjaną|lang=gem-pro}}.
 
 ===Pronunciation===
+* {{IPA|/ˈbɪtn̩/|ˈbɪtən|lang=de}}
+* {{audio|De-bitten.ogg|audio}}
 * {{audio|De-at-bitten.ogg|audio (Austria)}}
 
 ===Verb===
-{{de-verb-strong|class=5|bittet|bat|gebeten}}
+{{de-verb-strong|class=5|bittet|bat|gebeten|past subjunctive=bäte}}
+
 # {{transitive|or|intransitive}} To [[ask]]; to [[beg]]; to [[plead]]; to [[request]].
 
 ====Conjugation====
