--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -123,7 +123,9 @@ From {{etyl|enm}} {{term|mille|lang=enm}}, {{etyl|ang}} {{term|mylen|lang=ang}}.
 * Galician: {{t+|gl|muíño|m}}
 {{trans-mid}}
 * Greek: {{t+|el|μύλος|m|tr=mýlos}}
-* Latvian: {{t-|lv|maltuve}}
+* Latvian: {{t-|lv|dzirnavas|f|d}}
+* Lithuanian: {{t+|lt|malūnas|m}}
+* Old Prussian: {{t+|prg|malunis|m}}
 * Portuguese: {{t+|pt|moinho|m}}
 * Scottish Gaelic: {{t-|gd|muileann|m|f}}
 * Spanish: {{t+|es|molino|m}}
