t+bn:[[শশ]] ([[WT:EDIT|Assisted]]) <rabbit#20335663>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -59,7 +59,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * {{trreq|ba}}
 * Basque: {{t+|eu|untxi}}
 * Belarusian: {{t-|be|трус|m|tr=trus}}, {{t-|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
-* Bengali: {{t-|bn|খরগোশ|tr=khôrgosh|sc=Beng}}
+* Bengali: {{t-|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|শশ|tr=shasha|sc=Beng}}
 * Breton: {{t-|br|lapin}}, {{t+|br|konikl}}
 * Bulgarian: {{t+|bg|заек|m|tr=zaek}}
 * Burmese: {{t+|my|ယုန်|tr=joun|sc=Mymr}}
