--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -89,7 +89,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 * Gujarati: {{t-|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|ארנב|m|alt=אַרְנָב|tr=arnáv}}, {{t+|he|ארנבת|f|alt=אַרְנֶבֶת|tr=arnévet}}
-* Hindi: {{t-|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t-|hi|शशक|m|tr=śaśak|sc=Deva}}
+* Hindi: {{t-|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t-|hi|शशक|m|tr=śaśak|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t|hi|खरहा|tr=kharhaa|sc=Deva}}
 * Hopi: {{tø|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
