--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|fro}} {{term|acusement|lang=fro}}. More at {{term|accuse|lang=en}}.
+From {{etyl|frm}} {{term|acusement|lang=frm}}; later uses reformed from {{suffix|accuse|ment}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/əˈkjuːzmənt/}}
@@ -9,8 +9,11 @@
 ===Noun===
 {{en-noun}}
 
-# {{obsolete}} [[accusation|Accusation]].
-#: {{rfquotek|Chaucer}}
+# {{context|now|_|rare}} An [[accusation]]. {{defdate|from 14th c.}}
+#*'''c. 1390''', {{w|Geoffrey Chaucer}}, ''Troilus & Criseyde'', IV.50:
+#*:Than þenk I þis were here '''accusement'''.
+#*'''1596''', {{w|Edmund Spenser}}, ''The Faerie Queene'', V.9:
+#*:He gan t'efforce the evidence anew, / And new '''accusements''' to produce in place […].
 
 ===References===
 * {{R:Webster 1913}}
