--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -12,6 +12,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 {{en-verb|bleeds|bleeding|bled}}
 
 # {{intransitive|of an animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
+#: ''If her nose '''bleeds''' try to use ice.''
 # {{transitive}} To [[let]] or [[draw]] [[blood]] from an animal.
 # {{transitive}} To [[take]] large amounts of [[money]] from.
 # {{transitive}} To steadily lose (something vital).
