/* Etymology 2 */ hmm <otter#20339346>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -120,12 +120,12 @@ From {{etyl|ang}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|utra
 {{trans-bottom}}
 
 ===Etymology 2===
-Corruption.
+Corruption. {{etystub|lang=en|corruption of what?}}
 
 ====Noun====
 {{en-noun|-}}
 
-# {{obsolete}} [[annatto]]
+# {{obsolete}} [[annatto|Annatto]].<!--which sense? User:Mglovesfun-->
 
 {{Webster 1913}}
 
