--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -148,7 +148,7 @@ From {{etyl|dum|nl}} {{term|otter|lang=dum}}, from {{etyl|odt|nl}} {{term|ottar|
 ===Noun===
 {{nl-noun|m|otters|ottertje}}
 
-# [[otter]]
+# [[#English|otter]]
 
 [[Category:nl:Mammals]]
 
