--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -20,7 +20,7 @@
 * Czech: {{t-|cs|odčítání|n}}
 * Dutch: {{t+|nl|aftrekken|n}}
 * Esperanto: {{t-|eo|subtraho}}
-* Estonian: [[lahutamine]]
+* Estonian: {{t|et|lahutamine}}
 * Finnish: {{t-|fi|vähentäminen}}
 * French: {{t+|fr|soustraction|f}}
 * German: {{t+|de|Subtraktion|f}}
@@ -28,16 +28,16 @@
 * Hungarian: {{t+|hu|kivonás}}
 * Italian: {{t-|it|sottrazione|f}}
 {{trans-mid}}
-* Japanese: [[引き算]] (ひきざん, hikizan)
+* Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}
 * Persian: {{t+|fa|تفریق}}
 * Polish: {{t+|pl|odejmowanie|n}}
 * Portuguese: {{t+|pt|subtração|f}}
-* Romanian: [[scădere]] {{f}}
+* Romanian: {{t|ro|scădere|f}}
 * Russian: {{t+|ru|вычитание|n|tr=vyčitánije}}
 * Slovak: {{t-|sk|odčítanie|n}}
 * Spanish: {{t+|es|resta|f}}
 * Swedish: {{t+|sv|subtraktion}}
-* Telugu: [[తీసివేత]] (teesiveata)
+* Telugu: {{t|te|తీసివేత|tr=teesiveata|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|calculation}}
@@ -48,7 +48,7 @@
 {{trans-mid}}
 * Hungarian: {{t+|hu|kivonás}}
 * Italian: {{t-|it|sottrazione|f}}
-* Telugu: [[తీసివేత]] (teesiveata)
+* Telugu: {{t|te|తీసివేత|tr=teesiveata|sc=Telu}}
 {{trans-bottom}}
 
 ====Related terms====
