--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -17,6 +17,8 @@
 
 {{trans-top|process}}
 * Catalan: {{t-|ca|sostracció|f}}
+* Chinese:
+*: Mandarin: {{t|cmn|減法|sc=Hani}}, {{t|cmn|减法|tr=jiǎnfǎ|sc=Hani}}
 * Czech: {{t-|cs|odčítání|n}}
 * Dutch: {{t+|nl|aftrekken|n}}
 * Esperanto: {{t-|eo|subtraho}}
@@ -25,9 +27,9 @@
 * French: {{t+|fr|soustraction|f}}
 * German: {{t+|de|Subtraktion|f}}
 * Greek: {{t+|el|αφαίρεση|f|tr=afaíresi}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|kivonás}}
 * Italian: {{t-|it|sottrazione|f}}
-{{trans-mid}}
 * Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}
 * Persian: {{t+|fa|تفریق}}
 * Polish: {{t+|pl|odejmowanie|n}}
@@ -48,6 +50,7 @@
 {{trans-mid}}
 * Hungarian: {{t+|hu|kivonás}}
 * Italian: {{t-|it|sottrazione|f}}
+* Russian: {{t|ru|вычитание|n|tr=vyčitánije|sc=Cyrl}}
 * Telugu: {{t|te|తీసివేత|tr=teesiveata|sc=Telu}}
 {{trans-bottom}}
 
