add lang to homophones <mill#20343473>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -5,7 +5,7 @@
 * {{enPR|mĭl}}, {{IPA|/mɪl/}}, {{X-SAMPA|/mIl/}}
 * {{audio|en-us-mill.ogg|Audio (US)}}
 * {{rhymes|ɪl}}
-* {{homophones|mil}}
+* {{homophones|lang=en|mil}}
 
 ===Etymology 1===
 From {{etyl|enm}} {{term|mille|lang=enm}}, {{etyl|ang}} {{term|mylen|lang=ang}}.
