--- a/en/u/universalise.802786.wikitext
+++ b/en/u/universalise.802786.wikitext
@@ -17,7 +17,7 @@
 ==French==
 
 ===Pronunciation===
-* {{homophones|universalisent|universalises}}
+* {{homophones|lang=fr|universalisent|universalises}}
 
 ===Verb===
 {{fr-verb form}}
