add lang to homophones <cued#20347800>

--- a/en/c/cued.856181.wikitext
+++ b/en/c/cued.856181.wikitext
@@ -3,7 +3,7 @@
 ===Pronunciation===
 * {{rhymes|uːd}}
 * {{IPA|/kjuːd/}}
-* {{homophones|queued}}
+* {{homophones|lang=en|queued}}
 
 ===Verb===
 '''cued'''
