--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -5,7 +5,7 @@
 * {{audio|Nl-wassen.ogg|audio}}
 
 ===Etymology 1===
-From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|waskan|lang=odt}}, from {{etyl|gem-pro|nl}} {{recons|waskaną||to wash, make wet|lang=gem-pro}}, from {{etyl|ine-pro|nl}} {{recons|wod-||water; wet|lang=ine-pro}}. Cognate with {{etyl|de|-}} {{term|waschen||to wash|lang=de}}, {{etyl|fy|-}} {{term|waskje||to wash|lang=fy}}, {{etyl|en|-}} {{term|wash|lang=en}}. More at {{l|en|wash}}.
+From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|waskan|lang=odt}}, from {{etyl|gem-pro|nl}} {{recons|waskaną||to wash, make wet|lang=gem-pro}}, ultimately from {{etyl|ine-pro|nl}} {{recons|wod-||water; wet|lang=ine-pro}}. Cognate with {{etyl|nds|-}} {{term|waschen||to wash|lang=nds}}, {{etyl|de|-}} {{term|waschen||to wash|lang=de}}, {{etyl|fy|-}} {{term|waskje||to wash|lang=fy}}, {{etyl|en|-}} {{term|wash|lang=en}}, {{etyl|da|-}} {{term|vaske||to wash|lang=da}}. More at {{l|en|wash}}.
 
 ====Verb====
 {{nl-verb}}
