t+mi:[[rāpeti]] ([[WT:EDIT|Assisted]]) <rabbit#20394283>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Malayalam: {{t-|ml|മുയല്‍}}
 * Maltese: {{t-|mt|fenek|m}}
 * Manx: {{t-|gv|conning|f}}
-* {{trreq|mi}}
+* Maori: {{t|mi|rāpeti}}
 * Marathi: {{t-|mr|ससा|m}}, {{t-|mr|सशी|f}}
 * Maricopa: {{tø|mrc|xalyaw}}
 * {{trreq|mwl}}
