/* Old High German */ <rot#20403276>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -259,7 +259,7 @@ From {{etyl|gmh|de}} {{term|rot|rōt|lang=gmh|red, red-haired}}, from {{etyl|goh
 ==Old High German==
 
 ===Etymology===
-From {{etyl|gem-pro|goh}} {{recons|raudaz|lang=gem-pro}} (compare Old Saxon {{term|rod|rōd|lang=osx}}, Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}, Gothic {{term|𐍂𐌰𐌿𐌸𐍃|t=rauþs|lang=got}}), from {{etyl|ine-pro|goh}} {{recons|h₁rowdʰós|lang=ine-pro}} < {{recons|h₁rewdʰ-|lang=ine-pro}}.
+From {{etyl|gem-pro|goh}} {{recons|raudaz|lang=gem-pro}} (compare Old Saxon {{term|rod|rōd|lang=osx}}, Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}, Gothic {{term|𐍂𐌰𐌿𐌸𐍃|tr=rauþs|lang=got}}), from {{etyl|ine-pro|goh}} {{recons|h₁rowdʰós|lang=ine-pro}} < {{recons|h₁rewdʰ-|lang=ine-pro}}.
 
 ===Adjective===
 {{head|goh|adjective|head=rōt}}
