--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -44,11 +44,12 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Hindi: {{t-|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
-{{trans-mid}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
+{{trans-mid}}
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
+* Khmer: {{t|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
 * Korean: {{t+|ko|대나무|tr=daenamu|sc=Kore}}
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo}}
 * Latin: {{t-|la|harundo Indica|f|alt=harundō Indica}}
