t+ja:[[吹く]] ([[WT:EDIT|Assisted]]) <blow#20428844>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Hungarian: {{t+|hu|fúj}}
 * Irish: {{t-|ga|séid}}
 * Italian: {{t+|it|soffiare}}
-* Japanese: [[吹く]] ([[ふく]], fuku)
+* Japanese: [[吹く]] ([[ふく]], fuku), {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}
 * Korean: [[불다]] (bulda)
 * Kurdish:
 *: Sorani: {{ku-Arab|[[فو]]}}
