--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -109,7 +109,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Armenian: {{t-|hy|փչել|tr=p'čel}}
 * Aromanian: {{t-|rup|suflu}}
 * Belarusian: {{t|be|дзьмуць|tr=dzʹmucʹ|sc=Cyrl}}, {{t|be|дуць|tr=ducʹ|sc=Cyrl}}
-* Bulgarian: {{t+|bg|духам}}, {{t+|bg|вея}}
+* Bulgarian: {{t+|bg|духам|tr=dúham}}, {{t+|bg|вея|tr=véja}}
 * Burmese: {{t+|my|မှုတ်|tr=hmok|sc=Mymr}}
 * Catalan: {{t+|ca|bufar}}
 * Chinese:
@@ -145,11 +145,11 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Rapa Nui: {{tø|rap|puhi}}
 * Romanian: {{t-|ro|sufla}}
 * Romansch: {{t-|rm|sufflar}}
-* Russian: {{t+|ru|дуть|tr=dutʹ}} {{impf}}, {{t+|ru|дунуть|tr=dúnutʹ}} {{pf.}}, {{t+|ru|сморкаться|tr=smorkátʹsja}} {{impf}}, {{t-|ru|сморкнуться|tr=smorknútʹsja}} {{pf.}} ''blow the nose'', {{t|ru|веять|tr=véjatʹ|sc=Cyrl}}, {{t|ru|повеять|tr=povéjatʹ|sc=Cyrl}}, {{t|ru|подуть|tr=podútʹ|sc=Cyrl}}, {{t|ru|подуть|tr=podútʹ|sc=Cyrl}}
+* Russian: {{t+|ru|дуть|tr=dutʹ}} {{impf}}, {{t+|ru|дунуть|tr=dúnutʹ}} {{pf.}}, {{t|ru|подуть|tr=podútʹ|sc=Cyrl}} {{pf.}}, {{t|ru|веять|tr=véjatʹ|sc=Cyrl}} {{impf}}, {{t|ru|повеять|tr=povéjatʹ|sc=Cyrl}} {{pf.}}, {{t+|ru|сморкаться|tr=smorkátʹsja}} {{impf}}, {{t-|ru|сморкнуться|tr=smorknútʹsja}} {{pf.}} ''blow the nose''
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|дувати}}
-*: Roman: {{t|sh|duvati}}
+*: Cyrillic: {{t|sh|дувати}} {{qualifier|Bosnian, Serbian}}, {{t|sh|духати}} {{qualifier|Croatian}}
+*: Roman: {{t|sh|duvati}} {{qualifier|Bosnian, Serbian}}, {{t|sh|duhati}} {{qualifier|Croatian}}
 * Sicilian: {{t|scn|ciusciari}}
 * Slovak: {{t|sk|duť}}, {{t|sk|fúkať}}
 * Slovene: {{t+|sl|pihati}}
