--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -108,13 +108,13 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Arabic: {{t-|ar|نفخ|tr=nafaxa}}
 * Armenian: {{t-|hy|փչել|tr=p'čel}}
 * Aromanian: {{t-|rup|suflu}}
-* Belarusian: {{t|be|дзьмуць|tr=dzʹmucʹ|sc=Cyrl}}, {{t|be|дуць|tr=ducʹ|sc=Cyrl}}
+* Belarusian: {{t|be|дзьмуць|tr=dzʹmucʹ|sc=Cyrl}}, {{t|be|дуць|tr=ducʹ|sc=Cyrl}}, {{t|be|веяць|tr=vjéjacʹ|sc=Cyrl}}
 * Bulgarian: {{t+|bg|духам|tr=dúham}}, {{t+|bg|вея|tr=véja}}
 * Burmese: {{t+|my|မှုတ်|tr=hmok|sc=Mymr}}
 * Catalan: {{t+|ca|bufar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|吹|tr=chuī|sc=Hani}}, {{t|cmn|颳|sc=Hani}}, {{t+|cmn|刮|tr=guā|sc=Hani}}
-* Czech: {{t+|cs|vát}}, {{t-|cs|vanout}}, {{t+|cs|foukat}}
+* Czech: {{t+|cs|vát}}, {{t-|cs|vanout}}, {{t+|cs|foukat}}, {{t|cs|vanout}}
 * Danish: {{t+|da|blæse}}, {{t-|da|puste}}
 * Dutch: {{t+|nl|blazen}}, {{t+|nl|waaien}}
 * Finnish: {{t+|fi|puhaltaa}}
@@ -139,7 +139,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Lithuanian: {{t+|lt|pūsti}}
 * Macedonian: {{t-|mk|дува|tr=dúva}}
 * Malay: {{t-|ms|tiup}}, {{t-|ms|hembus}}
-* Polish: {{t+|pl|dmuchać}}
+* Polish: {{t+|pl|dmuchać}}, {{t|pl|dąć}}, {{t|pl|wiać}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
 * Quechua: {{t-|qu|phukuy}}
 * Rapa Nui: {{tø|rap|puhi}}
@@ -151,12 +151,12 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 *: Cyrillic: {{t|sh|дувати}} {{qualifier|Bosnian, Serbian}}, {{t|sh|духати}} {{qualifier|Croatian}}
 *: Roman: {{t|sh|duvati}} {{qualifier|Bosnian, Serbian}}, {{t|sh|duhati}} {{qualifier|Croatian}}
 * Sicilian: {{t|scn|ciusciari}}
-* Slovak: {{t|sk|duť}}, {{t|sk|fúkať}}
+* Slovak: {{t|sk|duť}}, {{t|sk|fúkať}}, {{t|sk|vanúť}}
 * Slovene: {{t+|sl|pihati}}
 * Spanish: {{t+|es|soplar}}
 * Swedish: {{t+|sv|blåsa}}
 * Turkish: {{t+|tr|üflemek}}
-* Ukrainian: {{t|uk|дути|tr=dúty|sc=Cyrl}}
+* Ukrainian: {{t|uk|дути|tr=dúty|sc=Cyrl}}, {{t|uk|віяти|tr=víjaty|sc=Cyrl}}
 * Vietnamese: {{t|vi|thổi}}, {{t|vi|phù}}, {{qualifier|to blow on food}} {{t|vi|phù phù}}
 {{trans-bottom}}
 
