--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -106,14 +106,7 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 # {{military|lang=nl}} a [[file]] (of men)
 
 ====Derived terms====
-* [[oude rot]]
-* [[rot op]]
-
-===Verb===
-{{head|nl}}
-
-# {{nl-verb form of|t=present|n=singular|p=first|rotten}}
-# {{nl-verb form of|m=imperative|rotten}}
+* {{l|nl|oude rot}}
 
 ===Anagrams===
 * [[tor#Dutch|tor]]
