--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -14,6 +14,9 @@ From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 * [[Sin City]]
 * [[The Strip]]
 
+====Derived terms====
+* [[Las Vegan]]
+
 ====Translations====
 {{trans-top|city}}
 * Arabic: {{t-|ar|لاس فيغاس|m|tr=las fiighas}}
