/* Noun */ Quote added <theory#20467402>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -21,6 +21,13 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θ
 #*: The world would need additional decades [...] before the Big Bang would begin to move from interesting idea to established '''theory'''.
 #* '''2009''', {{w|Richard Dawkins}}, ''The Greatest Show On Earth: The Evidence for Evolution'', Bantam, p. 10:
 #*: Scientists and creationists are understanding the word "'''theory'''" in two very different senses. Evolution is a '''theory''' in the same sense as the heliocentric '''theory'''. In neither case should the word "only" be used, as in "only a '''theory'''".
+#*{{quote-magazine|date=2012-01
+|author=Michael Riordan
+|title=Tackling Infinity
+|volume=100|issue=1|page=86
+|magazine=[[w:American Scientist|American Scientist]]
+|url=http://www.americanscientist.org/bookshelf/pub/tackling-infinity
+|passage=Some of the most beautiful and thus appealing physical '''theories''', including quantum electrodynamics and quantum gravity, have been dogged for decades by infinities that erupt when theorists try to prod their calculations into new domains. Getting rid of these nagging infinities has probably occupied far more effort than was spent in originating the theories.}}
 # {{uncountable}} The underlying [[principle]]s or [[method]]s of a given technical skill, [[art]] etc., as opposed to its [[practice]]. {{defdate|from 17th c.}}
 #* '''1990''', Tony Bennett, ''Outside Literature'', p. 139:
 #*: Does this mean, then, that there can be no such thing as a '''theory''' of literature?
