/* Noun */ Quote improved <theory#20467791>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -27,7 +27,7 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|θ
 |volume=100|issue=1|page=86
 |magazine=[[w:American Scientist|American Scientist]]
 |url=http://www.americanscientist.org/bookshelf/pub/tackling-infinity
-|passage=Some of the most beautiful and thus appealing physical '''theories''', including quantum electrodynamics and quantum gravity, have been dogged for decades by infinities that erupt when theorists try to prod their calculations into new domains. Getting rid of these nagging infinities has probably occupied far more effort than was spent in originating the theories.}}
+|passage=Some of the most beautiful and thus appealing physical '''theories''', including quantum electrodynamics and quantum gravity, have been dogged for decades by infinities that erupt when theorists try to prod their calculations into new domains. Getting rid of these nagging infinities has probably occupied far more effort than was spent in originating the '''theories'''.}}
 # {{uncountable}} The underlying [[principle]]s or [[method]]s of a given technical skill, [[art]] etc., as opposed to its [[practice]]. {{defdate|from 17th c.}}
 #* '''1990''', Tony Bennett, ''Outside Literature'', p. 139:
 #*: Does this mean, then, that there can be no such thing as a '''theory''' of literature?
