--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -86,6 +86,7 @@
 {{es-verb|abandon|ar}}
 
 # to [[abandon]]
+#: ''La '''abandonó''' por otra mujer'' - "He abandoned her for another woman."
 # to [[leave]]
 
 ====Conjugation====
