--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -11,7 +11,7 @@
 ===Adjective===
 {{es-adj|f=estadounidense|pl=estadounidenses}}
 
-# of the [[United States]] of America; American
+# of the [[United States]] of America; American; [[Usonian]]
 
 ===See also===
 * [[americano#Spanish|americano]]
