Added Turkish entry <bitten#20473744>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -62,6 +62,15 @@ From {{etyl|gem-pro|goh}} {{recons|bidjaną|lang=gem-pro}}, whence also Old Saxo
 ====Descendants====
 * German: {{l|de|bitten}}
 
+----
+
+==Turkish==
+
+===Noun===
+{{head|tr|noun form}}
+
+# {{ablative of|bit|lang=tr}}
+
 [[br:bitten]]
 [[cs:bitten]]
 [[de:bitten]]
