t+mi:[[pipiha]] ([[WT:EDIT|Assisted]]) <blow#20483066>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -231,6 +231,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Finnish: {{t-|fi|suihkuttaa}}, {{t+|fi|puhaltaa}}
 {{trans-mid}}
 * Korean: {{t|ko|뿜다|tr=ppumda|sc=Kore}}
+* Maori: {{t|mi|pipiha}}
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t|vi|phun nước}}
