--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -52,7 +52,7 @@
 ==Portuguese==
 
 ===Etymology===
-From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|a|lang=fro}} + {{term|bandon||jurisdiction, control|lang=fro}}, from {{etyl|ML.|pt}} {{term|bannum||proclamation|lang=la}}, from {{etyl|frk|pt}} {{recons|ban|lang=frk}}, from {{etyl|gem-pro|pt}} {{recons|bannan||proclamation, command|lang=gem-pro}}.
+From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|a|lang=fro}} + {{term|bandon||jurisdiction, control|lang=fro}}, from {{etyl|ML.|pt}} {{term|bannum||proclamation|lang=la}}, from {{etyl|frk|pt}} {{recons|ban|lang=frk}}, from {{etyl|gem-pro|pt}} {{recons|banną||proclamation, command|lang=gem-pro}}.
 
 ===Pronunciation===
 * {{IPA|[abɐ̃ˈdonu]|lang=pt}}
